[package]
name = "imgui-glow-renderer"
version = "0.12.0"
edition = "2021"
description = "glow renderer for the imgui crate"
homepage = "https://github.com/imgui-rs/imgui-glow-renderer"
repository = "https://github.com/imgui-rs/imgui-glow-renderer"
license = "MIT OR Apache-2.0"
categories = ["gui", "rendering"]

[dependencies]
imgui = { version = "0.12.0" }
glow = "0.14"
memoffset = "0.9"

[dev-dependencies]
glutin = "0.32"
glutin-winit = "0.5"
imgui-winit-support = "0.13.0"
image = "0.23"
raw-window-handle = "0.6.0"
winit = { version = "0.30", features = ["rwh_06"] }

[features]
# Features here are used to opt-out of compiling code that depends on certain
# OpenGL features. If the features are enabled, the renderer will check that the
# feature is supported before attempting to use it. Only opt-out of any of these
# if you are certain you will only target platforms that lack the corresponding
# feature.
default = [
    "gl_extensions_support",
    "debug_message_insert_support",
    "bind_vertex_array_support",
    "vertex_offset_support",
    "clip_origin_support",
    "bind_sampler_support",
    "polygon_mode_support",
    "primitive_restart_support",
]
# Enable checking for OpenGL extensions
gl_extensions_support = []
# Support for `gl.debug_message_insert`
debug_message_insert_support = []
# Support for `glBindVertexArray`
bind_vertex_array_support = []
# Support for `glDrawElementsBaseVertex`
vertex_offset_support = []
# Support for `GL_CLIP_ORIGIN`
clip_origin_support = []
# Support for `glBindSampler`
bind_sampler_support = []
# Support for `glPolygonMode`
polygon_mode_support = []
# Support for `GL_PRIMITIVE_RESTART`
primitive_restart_support = []